# Labels

./: CMakeLists.txt
src/: CMakeLists.txt
src/decorators/: CMakeLists.txt  CyclingTransformationsDecorator.cpp  CyclingTransformationsDecorator.hpp  LabelDecoratorBase.cpp  LabelDecoratorBase.hpp  RandomTransformationDecorator.cpp  RandomTransformationDecorator.hpp  TextTransformationDecorator.cpp  TextTransformationDecorator.hpp
src/labels/: CMakeLists.txt  CustomLabel.cpp  CustomLabel.hpp  HelpLabel.hpp  Label.hpp  RichLabel.cpp  RichLabel.hpp  SimpleLabel.cpp  SimpleLabel.hpp
src/services/: CMakeLists.txt  CensorTransformationFactory.cpp  CensorTransformationFactory.hpp  DecoratorFactory.cpp  DecoratorFactory.hpp  LabelFactory.cpp  LabelFactory.hpp  LabelPrinter.cpp  LabelPrinter.hpp  TransformationFactory.cpp  TransformationFactory.hpp
src/transformations/: CMakeLists.txt  CapitalizeTransformation.cpp  CapitalizeTransformation.hpp  CensorTransformation.cpp  CensorTransformation.hpp  CompositeTransformation.cpp  CompositeTransformation.hpp  DecorateTransformation.cpp  DecorateTransformation.hpp  LeftTrimTransformation.cpp  LeftTrimTransformation.hpp  NormalizeSpaceTransformation.cpp  NormalizeSpaceTransformation.hpp  ReplaceTransformation.cpp  ReplaceTransformation.hpp  RightTrimTransformation.cpp  RightTrimTransformation.hpp  TextTransformation.hpp
src/utils/: CMakeLists.txt  CensoredLetter.cpp  CensoredLetter.hpp  Color.cpp  Color.hpp  Complication.hpp  Font.cpp  Font.hpp  HelpText.cpp  HelpText.hpp  HexColor.cpp  HexColor.hpp  StyledFont.cpp  StyledFont.hpp
test/: CMakeLists.txt  test-label-printer.cpp  test-simple-label.cpp
test/decorators-tests/: test-cycling-transformation.cpp  test-decorator-removal.cpp  test-operator-equals.cpp  test-random-transformation.cpp  test-text-transformation-individual.cpp  test-text-transformation-stacked.cpp
test/label-tests/: test-custom-label.cpp  test-rich-label.cpp  test-simple-label.cpp
test/service-tests/: test-censor-factory.cpp  test-decorator-factory.cpp  test-label-factory.cpp  test-label-printer.cpp  test-transformation-factory.cpp
test/transformations-tests/: test-capitalization.cpp  test-censor.cpp  test-composite.cpp  test-decorate.cpp  test-left-trim.cpp  test-normalize-space.cpp  test-operator-equals.cpp  test-replace.cpp  test-right-trim.cpp
test/utils-tests/: test-color.cpp  test-font.cpp
